wp-content/plugins/ovr-featured-video-widget/ovr-featured-video-widget.css
.ovr_featured_video {
  width: 100%;
  background: rgb(236,236,236);
  margin: auto;
  height: 320px;
}

.ovr_featured_video_inner {
  position: relative;
  width: 96%;
  height: 92%;
  background: rgb(255,255,255);
  display: block;
  margin: auto;
  padding-bottom: 20px;
  text-align: center;
}

.ovr_featured_video_inner h4{
  text-align:center;
  color: rgb(103,28,51);
  position: relative;
  top: 5px;
  display: block;
  text-transform: uppercase;
}
.ovr_featured_video_box {
  display: block;
  width: 96%;
  height: 96%;
  margin: auto;
}

